--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:theme="@style/Theme.FlashcardsST10497375"
         tools:targetApi="31">
         <activity
+            android:name=".scoreActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity2quiz"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category
+                    android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
